about container fix description text color contrast

--- a/style/_about.scss
+++ b/style/_about.scss
@@ -14,7 +14,8 @@
     }
 
     p {
-        color: $dark-gray;
+        // color: $dark-gray;
+        color: #595959;
     }
 
     .item {
